--- a/sdf_asp_net/Views/Project/DetailView.cshtml
+++ b/sdf_asp_net/Views/Project/DetailView.cshtml
@@ -1,88 +1,218 @@
 ﻿@model sdf_asp_net.ViewModels.ProjectViewModel
 
+
+
 @{
+    Layout = "~/Views/Shared/_Layout2.cshtml";
     ViewBag.Title = "DetailView";
 }
 <div class="col-md-12">
-    <a href="@Url.Action("", "Project")"><button type="button" class="btn btn-success float-right btn-lg"> Zum Chatroom </button></a>
-    <button type="button" class="btn btn-success float-right btn-lg" data-toggle="modal" data-target="#exampleModal"> Nutzerliste </button>
 </div>
-<h2>Detailansicht</h2>
-
 <div>
-    <h6><b>Dashboard zum Projekt:</b> @Html.DisplayFor(model => model.Name)</h6>
-    <h6><b>@Html.DisplayNameFor(model => model.Description):</b> @Html.DisplayFor(model => model.Description)</h6>
-    <h6><b>Projektleiter:</b> @Html.DisplayFor(model => model.ManagerName)</h6>
+    <div class="jumbotron">
+        <h1 class="display-4">Projekt: @Html.DisplayFor(model => model.Name)</h1>
+        <p class="lead">Beschreibung: @Html.DisplayFor(model => model.Description)</p>
+        <hr class="my-4">
+        <p>Projektleiter: @Html.DisplayFor(model => model.ManagerName) </p>
+
+        @{Html.RenderAction("_Chat"); }
+
+    </div>
+
     @{string userName = Model.ManagerName;}
-
     <hr />
+    @using (Html.BeginForm("DownloadFile", "Project", FormMethod.Post))
+    {
+        <input type="hidden" id="hfFileId" name="FileId" />
+        <input type="submit" id="btnDownload" value="Download" style="display:none" />
+    }
+    <style>
 
-    <div class="container">
+        .container1 {
+            position: relative;
+            left: 20px;
+        }
+        .btn btn-primary{
+            color:red;
+        }
+        </style>
+    <div class="container1">
+
+
+
         <div class="row">
+
             <div class="col-9">
-                <h2>Messageboard</h2>
-                <div class="list-group">
-                    <a href="#" class="list-group-item list-group-item-action flex-column align-items-start active">
-                        <div class="d-flex w-100 justify-content-between">
-                            <h5 class="mb-1">Message 1</h5>
-                            <small>1 days ago</small>
-                        </div>
-                        <small class="mb-1">Cihan hat einen kleinen, uff was ist passiert?</small>
-                    </a>
-                    <br />
-                    <a href="#" class="list-group-item list-group-item-action flex-column align-items-start active">
-                        <div class="d-flex w-100 justify-content-between">
-                            <h5 class="mb-1">Message 2</h5>
-                            <small>3 days ago</small>
-                        </div>
-                        <small class="mb-1">Kevin W hat Blasen auf den Knien vom blasen auf den Knien</small>
-                    </a>
-                    <br />
-                    <a href="#" class="list-group-item list-group-item-action flex-column align-items-start active">
-                        <div class="d-flex w-100 justify-content-between">
-                            <h5 class="mb-1">Message 3</h5>
-                            <small>5 days ago</small>
-                        </div>
-                        <small class="mb-1">Pujan hat einen riesen yarro, uff was ist passiert?</small>
-                    </a>
+                <div class="list-group" style="height: 700px; overflow-y: scroll; width:1000px; ">
+
+                    <h2>Messageboard</h2>
+                    @for (int i = 0; i < Model.Messages.Count; i++)
+                    {
+                        <li class="list-group-item list-group-item-action flex-column align-items-start active">
+                            <div class="d-flex w-100 justify-content-between">
+                                <h2 class="mb-1">@Model.Messages[i].Message</h2>
+                                <small>veröffentlicht am: @Model.Messages[i].Date</small>
+                            </div>
+                            <small class="mb-1">von: @Model.Messages[i].Author</small>
+                            <div class="d-flex w-100 justify-content-between">
+                                <h6 class="mb-1">@Model.Messages[i].FileName</h6>
+                                <small class="mb-1">@Model.Messages[i].FileContentType</small>
+                            </div>
+                        </li>
+
+                        if (@ViewBag.IsAuthorized != null && userName != null)
+                        {
+                            if (userName.ToString().Contains(@ViewBag.IsAuthorized) && @Model.Messages[i].FileName.ToString().Length > 0)
+                            {
+                                <a href="javascript:;" class="btn btn-success float-right" onclick="DownloadFile(@Model.Messages[i].Id)">Download</a>
+                            }
+                            using (Html.BeginForm("Reply", "Project", FormMethod.Post))
+                            {
+                                <input type="hidden" name="projectId" class="form-control" value="@Model.Id" aria-label="Message" aria-describedby="button-addon4">
+                                <input type="hidden" name="messageboardId" class="form-control" style="border-color:black;" value="@Model.Messages[i].Id" aria-label="Message" aria-describedby="button-addon4">
+                                <div class="input-group-append" id="button-addon4">
+                                    <input type="text" id="messageInput" name="message" class="form-control" placeholder="Deine Antwort" aria-label="Message" style="width:800px; " aria-describedby="button-addon4">
+                                    <input type="submit" id="btnUpload" value="Senden" class="btn btn-primary" style="width:100px; border-color:black; color:yellow" />
+                                </div>
+                            }
+                        }
+                        if (Model.Messages[i].MessageReplies.Count > 0)
+                        {
+                            <button type="button" class="btn btn-success float-right btn-lg" data-toggle="modal" data-target="#reply@(i)">Diskussion</button>
+                        }
+                        <br />
+                        <br />
+
+                    }
+
                 </div>
             </div>
         </div>
-    </div>
 
+    </div>
+    <br />
+    @using (Html.BeginForm("Message", "Project", FormMethod.Post, new { enctype = "multipart/form-data" }))
+    {
+        if (@ViewBag.IsAuthorized != null && userName != null)
+        {
+            if (userName.ToString().Contains(@ViewBag.IsAuthorized))
+            {
+                <div class="input-group">
+                    <input type="text" id="messageInput" name="message" class="form-control" placeholder="Deine Nachricht" aria-label="Message" aria-describedby="button-addon4">
+                    <input type="hidden" name="projectId" class="form-control" value="@Html.DisplayFor(model => model.Id)" aria-label="Message" aria-describedby="button-addon4">
+                    <div class="input-group-append" id="button-addon4">
+                        <input type="file" name="postedFile" class="btn btn-primary" />
+                        <input type="submit" id="btnUpload" value=">" class="btn btn-primary" style="width:15px;" />
+                    </div>
+                </div>
+            }
+        }
+    }
 </div>
+<br />
+
+
+
+
 <p>
+    <a href="@Url.Action("Index", "Project")" class="btn btn-success float-right btn-lg" role="button" aria-pressed="true">Zurück zu der Projektliste</a>
     @if (@ViewBag.IsAuthorized != null && userName != null)
     {
         if (userName.ToString().Contains(@ViewBag.IsAuthorized))
         {
-            @Html.ActionLink("Bearbeiten", "Edit", new { id = Model.Id })
+            <a href="@Url.Action("Edit", "Project", new { id = Model.Id })" class="btn btn-primary float-right btn-lg" role="button" aria-pressed="true">Bearbeiten</a>
         }
     }
-   |  @Html.ActionLink("Zurück zu der Projektliste", "Index")
 </p>
 
+<hr>
+@for (int i = 0; i < Model.Messages.Count; i++)
+{
+    <div class="modal fade" id="reply@(i)" tabindex="-1" role="dialog" aria-labelledby="userListeModalLabel" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="userListeModalLabel">Nachrichtenverlauf</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <ul class="list-group">
+                        @for (int j = 0; j < Model.Messages[i].MessageReplies.Count; j++)
+                        {
+                        <li>@Model.Messages[i].MessageReplies[j].Author schrieb am @Model.Messages[i].MessageReplies[j].Date.ToString()
+                        : @Model.Messages[i].MessageReplies[j].Message</li>
+                        }
 
-<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog" role="document">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel">Nutzerliste</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-            </div>
-            <div class="modal-body">
-                <ul class="list-group">
-                    @foreach (var member in Model.Member)
-                    {
-                        <li class="list-group-item list-group-item-info">@member</li>
-                    }
-                </ul>
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-primary" data-dismiss="modal">Schließen</button>
+                    </ul>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-primary" data-dismiss="modal">Schließen</button>
+                </div>
             </div>
         </div>
     </div>
-</div>
+}
+
+
+
+<script src="~/Scripts/jquery-1.10.2.min.js"></script>
+<script type="text/javascript">
+    function DownloadFile(fileId) {
+        $("#hfFileId").val(fileId);
+        $("#btnDownload")[0].click();
+    };
+
+</script>
+@section scripts {
+    <!--Script references. -->
+    <!--The jQuery library is required and is referenced by default in _Layout.cshtml. -->
+    <!--Reference the SignalR library. -->
+    <script src="~/Scripts/jquery.signalR-2.4.0.min.js"></script>
+    <!--Reference the autogenerated SignalR hub script. -->
+    <script src="~/signalr/hubs"></script>
+    <!--SignalR script to update the chat page and send messages.-->
+    <script>
+        $(function () {
+            // Reference the auto-generated proxy for the hub.
+            var chat = $.connection.chatHub;
+            // Create a function that the hub can call back to display messages.
+            chat.client.addNewMessageToPage = function (name, message) {
+
+                $('#discussion').append('<li><strong>' + htmlEncode(name)
+                    + '</strong>: ' + htmlEncode(message) + '</li>');
+            };
+
+
+
+
+
+            $('#message').focus();
+            // Start the connection.
+            $.connection.hub.start().done(function () {
+            chat.server.joinGroup("@User.Identity.Name","@Html.DisplayFor(model => model.Name)");
+
+
+                $('#btnSendGroup').click(function () {
+                    chat.server.sendGroups("@User.Identity.Name","@Html.DisplayFor(model => model.Name)", $('#messageGroup').val());
+                });
+
+
+
+            });
+        });
+        // This optional function html-encodes messages for display in the page.
+        function htmlEncode(value) {
+            var encodedValue = $('<div />').text(value).html();
+            return encodedValue;
+        }
+        function fillModel() {
+            var chatModel = {}
+            chatModel.id = 0;
+            chatModel.message = $("msg").val();
+            chatModel.user = "@User.Identity.Name";
+            chatModel.timeStamp = Date.now();
+            }
+    </script>
+}
