--- a/sdf_asp_net/Views/Shared/_Layout.cshtml
+++ b/sdf_asp_net/Views/Shared/_Layout.cshtml
@@ -1,21 +1,19 @@
-﻿<!DOCTYPE html>
+﻿
+
+<!DOCTYPE html>
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title - Meine ASP.NET-Anwendung</title>
-
     <script type="text/javascript" src='~/Scripts/jquery-3.3.1.js'></script>
     <script type="text/javascript" src='~/Scripts/bootstrap.min.js'></script>
     @Styles.Render("~/Content/CSS/StyleSheet.css")
 
- 
-
 
 </head>
 <body>
-
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <a class="navbar-brand" href="#">.Project</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -37,37 +35,20 @@
         </div>
     </nav>
 
-
     <div class="row">
         <div class="leftcolumn">
             <div class="card">
                 @RenderBody()
             </div>
-        </div>
-        <div class="rightcolumn">
-            <div class="card">
-                <h2>Placeholder</h2>
-                <div class="fakeimg" style="height:100px;">Image</div>
-                <p>Placeholder</p>
-            </div>
-            <div class="card">
-                <h3>Placeholder</h3>
-                <div class="fakeimg"><p>Image</p></div>
-                <p>Placeholder</p>
-            </div>
-            <div class="card">
-                <p>Placeholder</p>
-            </div>
-        </div>
-    </div>
 
-    <div class="footer">
-        <h2>Footer</h2>
+        
+        </div>
+
+
     </div>
 
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
     @RenderSection("scripts", required: false)
-
 </body>
 </html>
